# hive

./: .editorconfig  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  hive.toml.example  install.ps1  install.sh  lovenote.toml
.github/workflows/: ci.yml  orchestrator-scan.yml  release.yml  repo-guard.yml
cli/: Cargo.toml  build.rs
cli/src/: grpc_client.rs  main.rs
cli/src/commands/: app.rs  backup.rs  cron.rs  daemon.rs  deploy.rs  diff.rs  exec.rs  init.rs  join.rs  logs.rs  mod.rs  nodes.rs  ps.rs  registry.rs  restart.rs  rollback.rs  scale.rs  secret.rs  setup.rs  status.rs  stop.rs  top.rs  update.rs  validate.rs  volume.rs
console/: package-lock.json  package.json  vite.config.js
console/src/: app.css  app.html
console/src/lib/: api.js  utils.js
console/src/routes/: +layout.svelte  +page.svelte
daemon/: go.mod  go.sum
daemon/cmd/hived/: main.go
daemon/internal/admission/: admission.go
daemon/internal/api/: mesh_server.go  server.go  server_test.go
daemon/internal/appstore/: embed.go  parse.go  registry.go  store.go
daemon/internal/auth/: auth.go  auth_test.go  jwt.go  password.go
daemon/internal/autoscale/: autoscale.go
daemon/internal/backup/: backup.go
daemon/internal/config/: config.go  config_test.go  hived.toml.example
daemon/internal/console/: embed.go
daemon/internal/container/: docker.go  logstream.go  provider.go
daemon/internal/cron/: cron_test.go  parse.go  scheduler.go
daemon/internal/health/: checker.go  history.go  loop.go
daemon/internal/hivefile/: parse.go  parse_test.go  stack.go  toposort.go  toposort_test.go  validate.go
daemon/internal/hooks/: hooks.go
daemon/internal/httpapi/: auth_handlers.go  feature_handlers.go  handler.go
daemon/internal/joincode/: joincode.go  joincode_test.go
daemon/internal/logs/: buffer.go  buffer_test.go  collector.go  sink.go
daemon/internal/mesh/: broadcast.go  config.go  delegate.go  events.go  mesh.go
daemon/internal/metrics/: metrics.go
daemon/internal/pki/: ca.go  node.go  pki_test.go  renew.go  tls.go
daemon/internal/platform/: paths_linux.go  paths_windows.go  platform.go
daemon/internal/proxy/: config.go  manager.go
daemon/internal/scheduler/: scheduler.go  scheduler_test.go
daemon/internal/secrets/: vault.go
daemon/internal/store/: store.go  store_test.go
daemon/internal/sysinfo/: disks.go  disks_windows.go  sysinfo.go  sysinfo_other.go  sysinfo_windows.go
dashboards/: hive.json
recipes/nginx/: recipe.toml
recipes/postgres/: recipe.toml
recipes/redis/: recipe.toml
scripts/: install.ps1  install.sh
tui/: Cargo.toml  build.rs
tui/src/: app.rs  grpc_client.rs  main.rs
tui/src/views/: logs.rs  mod.rs  nodes.rs  overview.rs  services.rs
(+59 files in other folders)
