[package]
name = "hive"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "CLI for the Hive container orchestrator"
license = "MIT"
repository = "https://github.com/jalsarraf0/hive"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tabled = "0.17"
anyhow = "1"
colored = "2"
tonic = { version = "0.13", features = ["tls-ring"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dialoguer = "0.11"
indicatif = "0.17"
hostname = "0.4"

[build-dependencies]
tonic-build = "0.13"

[profile.release]
codegen-units = 1
lto = true
strip = true
