[package]
name = "hivetop"
version = "2.6.0"
edition = "2024"
rust-version = "1.85"
description = "TUI dashboard for the Hive container orchestrator"
license = "MIT"
repository = "https://github.com/jalsarraf0/hive"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
tonic = { version = "0.13", features = ["tls-ring"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
clap = { version = "4", features = ["derive", "env"] }

[build-dependencies]
tonic-build = "0.13"

[profile.release]
codegen-units = 1
lto = true
strip = true
